--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,5 @@ python:
 install:
   - pip install .
 # command to run tests
-script:
- - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then python -m unittest discover; fi
- - if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then python -m unittest discover; fi
+script: python -m unittest discover
+
