--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,4 +7,5 @@ pipelines:
         caches:
           - pip
         script:
+          - pip install --upgrade pip
           - python setup.py install
