--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,7 +5,7 @@ pipelines:
   default:
     - step:
         caches:
-          - pip
-        script:
           - pip install --upgrade pip
+          - pip install requests pyyaml pynacl gevent uwsgi ws4py eth-typing<2 web3
+        script:
           - python setup.py install
