--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -2,10 +2,11 @@
 image: python:3.5
 
 pipelines:
-  default:
-    - step:
-        caches:
-          - pip install --upgrade pip
-          - pip install requests pyyaml pynacl gevent uwsgi ws4py eth-typing<2 web3
-        script:
-          - python setup.py install
+    default:
+        - step:
+            caches:
+                - pip
+            script:
+                - pip install --upgrade pip
+                - python setup.py install
+                - python -m unittest discover .
